[package]
name = "csvconv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
indicatif = "0.17.3"
itertools = "0.10.5"
unicode-segmentation = "1.10.1"
