[package]
name = "csvconv"
authors = ["Aloizio Macedo"]
description = "CSV Delimiter Converter."
repository = "https://github.com/AloizioMacedo/csvconv"
version = "0.1.0"
license = "MIT"
edition = "2021"
readme = "README.md"
categories = ["command-line-interface", "command-line-utilities"]
exclude = ["target", "Cargo.lock"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
indicatif = "0.17.3"
itertools = "0.10.5"
rayon = "1.6.1"
unicode-segmentation = "1.10.1"
